--- a/src/stylesheets/footer.css
+++ b/src/stylesheets/footer.css
@@ -4,6 +4,18 @@
   padding-left: 1%;
 }
 
+.list {
+  list-style-type: none;
+}
+
+li {
+  padding-bottom: 9px;
+}
+
+a {
+  color: white;
+}
+
 .footer-lists {
   color: white;
 }
