--- a/src/stylesheets/product.css
+++ b/src/stylesheets/product.css
@@ -20,15 +20,32 @@
   display: flex;
   justify-content: space-evenly;
 }
+/* 
+box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  padding: 14px 80px 18px 36px;
+  cursor: pointer;
+*/
 
 .product-card {
+  padding: 0%;
   width: 18rem;
   margin-bottom: 2%;
   margin-top: 2%;
   background: #fffdfe;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.04);
   border-radius: 9px;
   position: relative;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+    0.3s box-shadow,
+    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  /* padding: 20px 20px 0px 0px; */
+  cursor: pointer;
+}
+
+.product-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
 .hover-div-btns {
@@ -48,7 +65,8 @@
   display: inline-block;
   text-align: center;
   color: white;
-  padding: 15%;
+  width: 100%;
+  height: 25px;
 }
 
 .sold {
@@ -58,7 +76,7 @@
 }
 
 .product-name {
-  margin-top: 5%;
+  margin: 5%;
   font-weight: bold;
 }
 
