--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -66,8 +66,9 @@
 .select-categories-btn {
   margin-left: 30%;
   width: 40vw;
-  /* background-color: white;
-    color:grey; */
+  background-color: white;
+  /* color: grey; */
+  border-radius: 5%;
 }
 
 /* .select-categories-btn:hover
@@ -90,6 +91,18 @@
   backdrop-filter: blur(25px);
   /* border-radius: 20px; */
   padding: 0;
+}
+
+.sub-category-div {
+  height: 10vh;
+}
+.sub-category-div h3 {
+  padding-left: 5%;
+  margin-bottom: 0;
+}
+
+.sub-category-div input[type="checkbox"] {
+  outline: 1px solid red;
 }
 
 .top-selling {
@@ -118,7 +131,7 @@
 
 .pagination-btns {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   margin-top: 2%;
   margin-bottom: 3%;
 }
@@ -192,6 +205,7 @@
 .filter-btn {
   margin-left: 38%;
   margin-top: 3%;
+  margin-bottom: 2%;
   border-radius: 50px;
   border: 1px solid #ee0405;
   background-color: #ee0405;
@@ -209,6 +223,7 @@
 
 .btn-secondary {
   color: red;
-  border-bottom-color: red;
+  border-color: red;
   text-align: left;
+  border-radius: 5%;
 }
