--- a/src/stylesheets/product.css
+++ b/src/stylesheets/product.css
@@ -1,145 +1,143 @@
-.original-price
-{
-    text-decoration: line-through;
-    font-size: small;
-    margin-left: 5%;
+.original-price {
+  text-decoration: line-through;
+  font-size: small;
+  margin-left: 5%;
+  margin: 0;
 }
 
-.discnt-price
-{
-    color:#EE0405;
-    font-weight: bold;
-    font-size: 1.5rem;
+.discnt-price {
+  color: #ee0405;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
-.product-div
-{
-    display: flex;
-    justify-content: space-evenly;
+.product-div {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.category-div
-{
-    display: flex;
-    justify-content: space-evenly;
+.category-div {
+  display: flex;
+  justify-content: space-evenly;
+}
+/* 
+  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+        transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    padding: 14px 80px 18px 36px;
+    cursor: pointer;
+  */
+
+.product-card {
+  padding: 0%;
+  width: 18rem;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background: #fffdfe;
+  border-radius: 9px;
+  position: relative;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+    0.3s box-shadow,
+    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  /* padding: 20px 20px 0px 0px; */
+  cursor: pointer;
 }
 
-.product-card
-{
-    width: 18rem;
-    margin-bottom: 2%;
-    margin-top: 2%;
-    background: #FFFDFE;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.04);
-    border-radius: 9px;
-    position: relative;
+.product-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
-.hover-div-btns
-{
-    float: left;
-    position: absolute;
-    left: 90px;
-    top: 110px;
-    z-index: 1000;
-    padding: 5px;
-    color: #FFFFFF;
-    font-weight: bold;
+.hover-div-btns {
+  float: left;
+  position: absolute;
+  left: 90px;
+  top: 110px;
+  z-index: 1000;
+  padding: 5px;
+  color: #ffffff;
+  font-weight: bold;
 }
 
-.sold-qty
-{
-    background-color:#EE0405;
-    border-radius: 50%;
-    display: inline-block;
-    text-align: center;
-    color: white;
-    padding: 15%;
+.sold-qty {
+  background-color: #ee0405;
+  border-radius: 50%;
+  display: inline-block;
+  text-align: center;
+  color: white;
+  width: 100%;
+  height: 25px;
 }
 
-.sold
-{
-    display: inline-block;
-    color: #EE0405;
-    font-weight: bold;
+.sold {
+  display: inline-block;
+  color: #ee0405;
+  font-weight: bold;
 }
 
-.product-name
-{
-    margin-top: 5%;
-    font-weight: bold;
+.product-name {
+  margin: 5%;
+  font-weight: bold;
 }
 
-.star-icon
-{
-    color: #F2994A;
+.star-icon {
+  color: #f2994a;
 }
 
-.product-body
-{
-    margin-top: -25px;
+.product-body {
+  margin-top: -25px;
 }
 
-.product-btns-tray:hover
-{
-    opacity: 1;
+.product-btns-tray:hover {
+  opacity: 1;
 }
 
-.view-cart-btns
-{
-    position:absolute;
-    bottom: 90px;
-    right: 25%;
-    color:#FFF;
+.view-cart-btns {
+  position: absolute;
+  bottom: 90px;
+  right: 25%;
+  color: #fff;
 }
 
-.parent-view-cart-btns
-{
-    display:inline-block;
-    position:relative;
-    width: 50%;; 
-    height: 50%;
+.parent-view-cart-btns {
+  display: inline-block;
+  position: relative;
+  width: 50%;
+  height: 50%;
 }
 
-.card-img-trnsprnt
-{
-    filter: brightness(0.5);
+.card-img-trnsprnt {
+  filter: brightness(0.5);
 }
 
-.card-img-product
-{
-    width: 100%;
-} 
+.card-img-product {
+  width: 100%;
+}
 
 /* .card-img-top:hover
-{
-    
-    background-color: green;
-} */
+  {
+      
+      background-color: green;
+  } */
 
-.view-btn
-{
-    height: 40px;
+.view-btn {
+  height: 40px;
 }
 
-.cart-btn path:hover
-{
-    stroke:red;
+.cart-btn path:hover {
+  stroke: red;
 }
 
-.cart-btn
-{
-    height: 40px;
+.cart-btn {
+  height: 40px;
 }
 
-.sold-qty-div
-{
-    padding-right: 0;
-    margin-top: 220%;
-    display: inline-block;
+.sold-qty-div {
+  padding-right: 0;
+  margin-top: 220%;
+  display: inline-block;
 }
 
-.eye-colour
-{
-    color:red;
+.eye-colour {
+  color: red;
 }
